# mcporacle

./: .env.example  .gitignore  pyproject.toml  readme.md
src/mcporacle/: __init__.py  config.py  errors.py  models.py  server.py  validation.py
src/mcporacle/oracle/: __init__.py  client.py
src/mcporacle/services/: __init__.py  dict_item.py  table_info.py
tests/: test_table_info_service.py  test_validation.py
