[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcporacle"
version = "0.1.0"
description = "Local MCP server for safe Oracle metadata access"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "oracledb>=2.0.0",
]

[project.scripts]
mcporacle = "mcporacle.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
